...
    <string name="number">Number</string>

    <string name="something_went_wrong">Something went wrong.</string>

    <string name="error">Error</string>

    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="purchase_history">Purchase History</string>
    <string name="account">Account</string>
...
    <string name="cancel_product">Cancel order product?</string>
    <string name="remove_product">Remove product?</string>
    <string name="cancel_order">Cancel order?</string>
    <string name="success_product_remove">Successfully canceled order</string>

    <string name="totalAmount">Total Amount</string>
    <string name="delivered">Delivered</string>

    <string name="zero">0</string>

    <string name="weight">Weight per quantity (kg)</string>

    <string name="no_initial_destination">Bought address not found</string>

    <string name="no_directions">No directions / routes can be found</string>

    <!-- Drawer Layout Nav -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Agree Culture</string>
    <string name="nav_header_subtitle">agree.culture@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_my_cart">My Cart</string>
...
    <string name="user_exists">Currently there is a user sign in</string>


    <!-- Main Menu -->
    <!-- Home Strings -->
    <string name="search_product_empty">Please input product to search</string>
    <string name="home_login">Login</string>
    <string name="home_logo_cont_description">Home Logo</string>
    <string name="home_search_hint">Search : Rice, Beans, and ETC.</string>
    <string name="home_button_dist">Distributor</string>
    <string name="home_button_sell">Supplier</string>
    <string name="home_button_cont_dist">Distributor</string>
    <string name="home_button_cont_sell">Supplier</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Main Menu -->
    <!-- Messages -->
    <string name="menu_messages_desc">
        <font size="18">
            <b>
...
