...


    <android.support.v7.widget.RecyclerView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/order_buyer_product_descholder"
        android:scrollbars="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/order_buyer_products_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

...
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

                <Button
                    android:id="@+id/order_buyer_product_delivered"
                    android:text="@string/delivered"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/button_white_background"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
...
